able to: -draw the 15x20 maze -able to identify which box is being touched (*row* *col*) -plot robot,goal and waypoint position -rotate robot direction TO DO: -figure out how to store the maze info -include all the types of blocks in maze and draw them based on the maze info
log
improved usability

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.BlueToothDeviceListActivity"></activity>
+        <activity android:name=".activity.BlueToothDeviceListActivity" />
+        <activity
+            android:name=".activity.StringCommandsActivity"
+            android:theme="@style/NoTitleDialog"/>
     </application>
 
 </manifest>
